syntax = "proto3";
package deliverable;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option java_multiple_files = true;
option java_package = "com.topcoder.onlinereview.component.grpcclient.deliverable.protos";
option java_outer_classname = "DeliverableProtos";

message LoadDeliverablesWithoutSubmissionRequest {
    repeated int64 deliverable_ids = 1;
    repeated int64 resource_ids = 2;
    repeated int64 phase_ids = 3;
}

message LoadDeliverablesWithoutSubmissionResponse {
    repeated DeliverableWithoutSubmissionProto deliverables_without_submission = 1;
}

message DeliverableWithoutSubmissionProto {
    google.protobuf.Int64Value project_id = 1;
    google.protobuf.Int64Value project_phase_id = 2;
    google.protobuf.Int64Value resource_id = 3;
    google.protobuf.BoolValue required = 4;
    google.protobuf.Int64Value deliverable_id = 5;
    google.protobuf.StringValue create_user = 6;
    google.protobuf.Timestamp create_date = 7;
    google.protobuf.StringValue modify_user = 8;
    google.protobuf.Timestamp modify_date = 9;
    google.protobuf.StringValue name = 10;
    google.protobuf.StringValue description = 11;
}

message LoadDeliverablesWithSubmissionRequest {
    repeated int64 deliverable_ids = 1;
    repeated int64 resource_ids = 2;
    repeated int64 phase_ids = 3;
    repeated int64 submission_ids = 4;
}

message LoadDeliverablesWithSubmissionResponse {
    repeated DeliverableWithSubmissionProto deliverables_with_submission = 1;
}

message DeliverableWithSubmissionProto {
    google.protobuf.Int64Value project_id = 1;
    google.protobuf.Int64Value project_phase_id = 2;
    google.protobuf.Int64Value resource_id = 3;
    google.protobuf.Int64Value submission_id = 4;
    google.protobuf.BoolValue required = 5;
    google.protobuf.Int64Value deliverable_id = 6;
    google.protobuf.StringValue create_user = 7;
    google.protobuf.Timestamp create_date = 8;
    google.protobuf.StringValue modify_user = 9;
    google.protobuf.Timestamp modify_date = 10;
    google.protobuf.StringValue name = 11;
    google.protobuf.StringValue description = 12;
}

message UpdateLateDeliverableRequest {
    google.protobuf.Int64Value late_deliverable_id = 1;
    google.protobuf.Int64Value project_phase_id = 2;
    google.protobuf.Int64Value resource_id = 3;
    google.protobuf.Int64Value deliverable_id = 4;
    google.protobuf.Timestamp deadline = 5;
    google.protobuf.Timestamp compensated_deadline = 6;
    google.protobuf.Timestamp create_date = 7;
    google.protobuf.BoolValue forgive_ind = 8;
    google.protobuf.Timestamp last_notified = 9;
    google.protobuf.Int64Value delay = 10;
    google.protobuf.StringValue explanation = 11;
    google.protobuf.Timestamp explanation_date = 12;
    google.protobuf.StringValue response = 13;
    google.protobuf.StringValue response_user = 14;
    google.protobuf.Timestamp response_date = 15;
    google.protobuf.Int64Value late_deliverable_type_id = 16;
}

message UpdatedCountProto {
    int32 count = 1;
}

message LateDeliverableTypeProto {
    google.protobuf.Int64Value late_deliverable_type_id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue description = 3;
}

message LateDeliverableTypesResponse {
    repeated LateDeliverableTypeProto late_deliverable_types = 1;
}

message AggregationDeliverableCheckRequest {
    google.protobuf.Int64Value resource_id = 1;
}

message AggregationDeliverableCheckResponse {
    repeated google.protobuf.Timestamp modify_date = 1;
}

message AppealResponsesDeliverableCheckRequest {
    google.protobuf.Int64Value resource_id = 1;
    google.protobuf.Int64Value submission_id = 2;
}

message AppealResponsesDeliverableCheckResponse {
    repeated google.protobuf.Int64Value modify_date = 1;
}

service DeliverableService {
    rpc loadDeliverablesWithoutSubmission(LoadDeliverablesWithoutSubmissionRequest) returns (LoadDeliverablesWithoutSubmissionResponse);
    rpc loadDeliverablesWithSubmission(LoadDeliverablesWithSubmissionRequest) returns (LoadDeliverablesWithSubmissionResponse);
    rpc updateLateDeliverable(UpdateLateDeliverableRequest) returns (UpdatedCountProto);
    rpc getLateDeliverableTypes(google.protobuf.Empty) returns (LateDeliverableTypesResponse);
    rpc aggregationDeliverableCheck(AggregationDeliverableCheckRequest) returns (AggregationDeliverableCheckResponse);
    rpc appealResponsesDeliverableCheck(AppealResponsesDeliverableCheckRequest) returns (AppealResponsesDeliverableCheckResponse);
}